--- a/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
@@ -76,6 +76,7 @@
 						<TextField fx:id="txfTelefone" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 						<Button fx:id="botaoSalvar" mnemonicParsing="false" onAction="#botaoSalvar_Action" prefHeight="27.0" prefWidth="146.0" text="Salvar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
 						<Button fx:id="botaoCancelar" mnemonicParsing="false" onAction="#botaoCancelar_Action" prefHeight="27.0" prefWidth="146.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btnExportaContatos_Action" prefHeight="27.0" prefWidth="142.0" text="Exportar" GridPane.rowIndex="2" />
 					</children>
 				</GridPane>
 			</content>
